--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Mixed Content 에러 요청 잠재우는 meta 태그. https 에서 http 요청이 가능하게 해줌.  -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/android-chrome-192x192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
